# atcoder

./: README.md  Taskfile.yml
IntroToHeuristics/: a.py  b.py  c.py
abc/150/: a.py  c.py  d.py
abc/150_abc/: b.py
abc/170/: c.py
abc/170_abc/: a.py  b.py
abc/200/: a.py  b.py  c.py  d.py
abc/201/: b.py  c.py
abc/201_abc/: a.py
abc/202/: c.py
abc/202_abc/: a.py  b.py
abc/203/: a.py  b.py  c.py
abc/204/: a.py  b.py  c.py
abc/205/: a.py  b.py  c.py
abc/206/: a.py  b.py  c.py
abc/207/: a.py  b.py
abc/208/: a.py  b.py
abc/209/: a.py  b.py
abc/230/: a.py  b.py  c.py  d.py
abc/231/: a.py  b.py  c.py  d.py
abc/232/: a.py  b.py  c.py  d.py  e.py
abc/233/: a.py  b.py  c.py
abc/235/: a.py  b.py
abc/236/: a.py  b.py  c.py
abc/246/: a.py  b.py  c.py
abc/247/: b_un.py
abc/247_abc/: a_mr.py  c_1.py  d_c.py  e_mm.py
abc/248/: a_ln.py  b_s.py  c_ds.py  d_rcq.py
abc/248_abc/: e_kl.py
abc/249/: d.py
abc/249_abc/: a.py  b.py  c.py
abc/250/: a.py  b.py  c.py  d.py
abc/251/: a.py  b.py  c.py  d.py  e.py
abc/252/: b.py  c.py  d.py  e.py
abc/253/: a.py  b.py  c.py  d.py
abc/254/: a.py  b.py  c.py
ahc/: 002.py  006.py  006.txt  006pg.py  011.py  011_path.py  011_score.py  011_search.py  011pg.py  013.py
ahc/015/: 015.py
ahc/033/: go.mod  main.go
ahc/ahc013/: Cargo.toml
ahc/ahc013/src/: main.rs
ahc/mayors-challenge/: go.mod  main.go  out  out000  out1
atcoder_arc/104_arc/: a_pm.py  b_ds.py
atcoder_arc/138_arc/: a_ls.py
atcoder_arc/139_arc/: a.py
atcoder_atc/: a_dfs.py  b_uf.py  b_w_rank.py  c_ft.py
(+33 files in other folders)
